change starting method