@@ -9,18 +9,11 @@ Practice on:
 
 ### How to run
 
-* Create executables for both client side and server side of the project by running below command.
-```
-mvn package
-```
-* ulak_server.jar under target is server side executable file.
-* ulak_client.jar under target is client side executable file.
-
-Run Server:
-`java --module-path %FX_HOME%\lib --add-modules javafx.controls,javafx.graphics,javafx.fxml,javafx.base -jar server/target/ulak_server.jar`
-
-Run Client:
-`java --module-path %FX_HOME%\lib --add-modules javafx.controls,javafx.graphics,javafx.fxml,javafx.base -jar client/target/ulak_client.jar`
+* Install javafx sdk
+* Add env variable FX_HOME with javafx sdk
+* Create package project with `mvn package`
+* Start the Server with `startServer.bat`
+* Start the Server with `startClient.bat`
 
 ## Screenshots
 
